# cmake-qt-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
src/: appinfo.h.in  main.cpp
